request Boston permits and output to file

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "express": "2.5.8"
     , "jade": ">= 0.0.1"
     , "request": "2.21.X"
+    , "libxmljs": "0.8.X"
   },
   "engines": {
     "node": "0.8.x",
